manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nfs-static-pv-demo
  labels:
    app.kubernetes.io/name: nfs-static-pv-demo
    app.kubernetes.io/part-of: nfs-static-pv-demo
